# beside_project

./: .gitignore  Dockerfile  README.md  build.sh  codecov.yml  docker-compose.yml  prod_build.sh  pyproject.toml
.github/workflows/: django.yml
comments/: admin.py  models.py  serializers.py
comments/migrations/: 0001_initial.py
common/management/commands/: backup_db.py
config/: settings.py  tests.py  urls.py
favorites/: admin.py  models.py  serializers.py  urls.py  views.py
favorites/migrations/: 0001_initial.py  0002_alter_favoirte_meme_unique_together.py
memes/: admin.py  models.py  s3_connect.py  serializers.py  tests.py  urls.py  views.py
memes/migrations/: 0001_initial.py  0002_meme_delete_memes.py  0002_meme_visited.py  0003_rename_meme_gif_meme_meme_url.py
nginx/: Dockerfile  nginx_dev.conf  nginx_local.conf  nginx_prod.conf
tags/: admin.py  default.json  models.py  serializers.py  urls.py  views.py
tags/management/commands/: default_tag.py
tags/migrations/: 0001_initial.py  0002_rename_tags_tag.py  0003_alter_tag_type.py  0004_alter_tag_unique_together.py
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
